# 3DSpatialIO

./: CMakeLists.txt  bench_e2e.cpp
docs/: mmap读取与优化器修正实施方案.md  三维数据切块存储优化方案.md  三维数据读取加速实现总方案.md  三维空间数据高效读写赛题文档.md  大文件流式改造实施方案.md  智能调度Cache层实施方案.md
generator_py/: run.py
include/: args.h  cache_reader.h  chunk_io.h  chunk_optimizer.h  common.h  file_io.h  profiler.h
src/: args.cpp  cache_reader.cpp  chunk_io.cpp  chunk_optimizer.cpp  file_io.cpp  main.cpp  profiler.cpp
test/: contest_bench.py  generate_data.py  verify.py
tests/: test_cache_reader.cpp  test_chunk_io.cpp  test_chunk_optimizer.cpp
